# pairs-test

./: .gitignore  CLAUDE.md  FINDINGS.md  NEXTSTEPS.md  PROJECT_GUIDE.md  README.md  config.py  dbscan+kmeans.md  explanation.md  plan.md  presentation.pptx  pyproject.toml  report+presentation.md  requirements.txt
deliverables/: build_presentation.py  presentation.pptx  report.tex  results_summary.md
research/: DBScan.ipynb  KMeans.ipynb  OPTICS_Clustering_Analysis.pptx  algorithm-comparison.ipynb  gold-vs-dxy.ipynb  optics-clustering-run.ipynb  optics-clustering.ipynb  optics-prediction.ipynb  optics-signals.ipynb  validation-testing.ipynb
screener/: METHODOLOGY.md  RESULTS.md  __init__.py  analysis.py  config.py  enhanced_backtest.py  features_adapter.py  screening.py  universe.py
screener/notebooks/: 01-screen-universe.ipynb  02-clustering.ipynb  03-signals-validation.ipynb  04-algorithm-comparison.ipynb  05-cross-sector-comparison.ipynb
signals/: __init__.py  detection.py  features.py  pipeline.py  stable.py  transient.py
tests/: test_config.py  test_screener.py  test_signals.py  test_trading.py  test_validation.py
trading/: __init__.py  trading.py
validation/: __init__.py  pair_validation.py
